src/test/deca/context/invalid/avecObjet/heritage_not_field_asm.deca
// Description :
//    Geritage avec nom de champ et nom de methode asm pareil
//
// Resultats :
//    Erreur contextuelle
//    Ligne 13 : Le membre x n'est pas une méthode

class A {
    int x;
}

class B extends A {
    void x() asm("RTS");
}